@@ -28,6 +28,7 @@ Misc:
  - Qt: Prevent savestate window from opening while in multiplayer
  - Qt: Disable menu items in multiplayer that don't make sense to have enabled
  - Qt: Dropping multiplayer windows works more cleanly now
+ - GBA BIOS: Implement RegisterRamReset for SIO registers
 
 0.3.0: (2015-08-16)
 Features:
